--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div id="blog1">
 					<img class="float" src="images/new-york-city.jpg" alt="1820s New York City" width="50%">
 					<p>
-						Hello, my name is actually Samantha Petty. I am in a dreadful situation right now… oh wait, 
+						Hello, my name is Samantha Petty. I am in a dreadful situation right now… oh wait, 
 						I didn’t tell you about myself. I am a 19 year-old girl, well, a Southern Belle. 
 						I have recently moved to the North where I am to be engaged with a wealthy man whose 
 						father owns a large plantation, but I despise all of it. My father had passed away a 
